# haskellCalculator

./: .gitignore  Application.hs  Foundation.hs  Home.hs  Import.hs  LICENSE  Main.hs  Mulitply.hs  Multiply.hs  README.md  Subtract.hs  client_session_key.aes  haskellCalculator.cabal  routes  test.db  yesod-calc.cabal  yesod-calc.cabal~
Handler/: #Result.hs#  .#Home.hs  .#Result.hs  Calc.hs  History.hs  History.hs~  Home.hs  Result.hs  Results.hs  User.hs  User.hs~
db/: haskCalc  haskCalc-shm  haskCalc-wal  haskCalc.db  yesod-calc.db
licenses/: isThisCorrect.md  isThisCorrect.md~  yesod
templates/: default-layout.hamlet  default-message-widget.hamlet  home.hamlet
test/Handler/: Result.hs
