name:               haskellCalculator
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          haskellCalculator
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Handler.Home
                    Handler.Results

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core
                , yesod-form
                , yesod-auth
                , text
                , template-haskell
                , bytestring
                , shakespeare
                , aeson
                , yesod
                , sqlite-simple
  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
