name:               yesod-calc
version:            1.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          yesod-calc
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Handler.Home
                    Handler.Result
                    Handler.History
                    Handler.Calc
                    Handler.User

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core
                , yesod
                , yesod-form
                , yesod-auth
                , yesod-auth-account
                , yesod-persistent
                , text
                , template-haskell
                , bytestring
                , shakespeare
                , aeson
                , persistent
                , persistent-sqlite
                , persistent-template
                , monad-logger
                , resourcet
  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite calc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010